Fix bs-popover menu on mobile.

--- a/xadmin/static/xadmin/css/xadmin.main.css
+++ b/xadmin/static/xadmin/css/xadmin.main.css
@@ -297,6 +297,16 @@
         max-width: none;
         left: 100%;
     }
+
+    #filter-menu .dropdown-submenu .bs-popover-right {
+        margin-top: -35px;
+        margin-left: 0;
+    }
+
+    #filter-menu .dropdown-submenu .bs-popover-left {
+        margin-top: -35px;
+        margin-right: 0;
+    }
 }
 
 @media (max-width: 768px) {
@@ -308,16 +318,6 @@
     #filter-menu .dropdown-submenu .popover {
         max-width: none;
     }
-}
-
-#filter-menu .dropdown-submenu .bs-popover-right {
-    margin-top: -35px;
-    margin-left: 0px;
-}
-
-#filter-menu .dropdown-submenu .bs-popover-left {
-    margin-top: -35px;
-    margin-right: 0px;
 }
 
 #filter-menu .dropdown-submenu:hover > .dropdown-menu,
